--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,7 +5,7 @@
     android:background="@mipmap/login"
     android:orientation="vertical"
     android:padding="16dp"
-    tools:ignore="ExtraText"> <!-- Replace with your background image -->
+    tools:ignore="ExtraText">
 
 
 
@@ -30,7 +30,7 @@
         android:layout_marginTop="16dp"
         android:background="@drawable/edt_background"
         android:gravity="center_vertical"
-        android:hint="Enter your email or phone number..."
+        android:hint="Enter your email..."
         android:inputType="textEmailAddress"
         android:paddingStart="8dp"
         android:textColor="@color/black" />
@@ -92,7 +92,7 @@
 
 
     <Button
-        android:id="@+id/btnLogin"
+        android:id="@+id/btnCreateAccount"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
