--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,33 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:padding="16dp"
-    android:background="#D1D1D6"
+    android:background="@color/theme"
     android:gravity="center_horizontal">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Luxury Perfume"
-        android:textSize="24sp"
-        android:textStyle="italic"
-        android:fontFamily="cursive"
-        android:layout_marginTop="20dp"
-        android:textColor="#000000"/>
 
-    <androidx.viewpager2.widget.ViewPager2
-        android:layout_width="match_parent"
-        android:layout_height="376dp" />
+    <com.denzcoskun.imageslider.ImageSlider
+        android:id="@+id/img_AutoBanner"
+        android:layout_width="380dp"
+        android:layout_height="643dp"
+        android:layout_weight="1"
+        app:iss_auto_cycle="true"
+        app:iss_delay="1000"
+        app:iss_period="1000"
+        app:iss_title_background="@color/theme" />
 
     <Button
-        android:id="@+id/getStartedButton"
+        android:id="@+id/btnGetStart"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="0dp"
         android:backgroundTint="@color/black"
         android:elevation="4dp"
+        android:padding="16dp"
         android:text="Get start"
         android:textColor="#FFFFFF" />
 </LinearLayout>
