--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -9,6 +9,7 @@
         android:id="@+id/top_navigation"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="#DDC4B1"
         android:padding="8dp">
 
         <ImageButton
