--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -61,9 +61,19 @@
         android:inputType="textEmailAddress"
         android:paddingStart="8dp"
         android:textColor="@color/black" />
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="25dp">
 
+    <ProgressBar
+        android:id="@+id/progressBar"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_gravity="center_horizontal"
+        android:visibility="invisible" />
     <Button
-        android:id="@+id/btnViewCart"
+        android:id="@+id/btnReset"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Reset Password"
@@ -72,5 +82,7 @@
         android:textStyle="bold"
         android:backgroundTint="@color/black"
         android:textColor="#FFFFFF"/>
+    </FrameLayout>
+
 
 </LinearLayout>
