Add Bottom_navigation ui

--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -6,11 +6,7 @@
     android:orientation="vertical"
     android:padding="16dp">
 
-    <!-- Header Text -->
 
-    <!-- Section with images and texts -->
-
-    <!-- Why Choose Us Section -->
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -29,19 +25,20 @@
 
 
         <TextView
-            android:layout_width="0dp"
-            android:layout_height="278dp"
+            android:layout_width="126dp"
+            android:layout_height="match_parent"
             android:layout_weight="1"
             android:fontFamily="sans-serif-light"
             android:text="At YVTD's Perfume, we believe that true beauty originates from the heart of nature. Our mission is to bring you high end perfume that helps you feel confident at all times"
             android:textAlignment="viewStart"
-            android:textSize="16sp" />
+            android:textSize="14sp" />
 
+        <!-- Enlarged ImageView to take more space -->
         <ImageView
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:src="@mipmap/img_chanel" />
+            android:layout_width="283dp"
+            android:layout_height="match_parent"
+            android:layout_weight="2"
+            android:src="@mipmap/img_big" />
     </LinearLayout>
 
     <TextView
@@ -61,7 +58,7 @@
         android:gravity="center"
         android:orientation="horizontal">
 
-        <!-- Accessibility Icon and Text -->
+
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -83,7 +80,7 @@
 
         </LinearLayout>
 
-        <!-- Sustainability Icon and Text -->
+
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -106,7 +103,7 @@
 
         </LinearLayout>
 
-        <!-- Journey Icon and Text -->
+
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -130,7 +127,7 @@
         </LinearLayout>
     </LinearLayout>
 
-    <!-- About Us Section -->
+
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -141,7 +138,6 @@
         android:textColor="#967054"
         android:gravity="center"/>
 
-    <!-- About Us Text -->
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -165,4 +161,11 @@
             android:textSize="14sp" />
 
     </LinearLayout>
+
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:menu="@menu/bottom_nav_menu"
+        />
+
 </LinearLayout>
