--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -6,166 +6,180 @@
     android:orientation="vertical"
     android:padding="16dp">
 
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:fontFamily="@font/recursive_bold"
-        android:gravity="center"
-        android:text="Embrace The Pure Scent Of Nature"
-        android:textColor="#967054"
-        android:textSize="30sp"
-        android:textStyle="bold" />
-
+<ScrollView
+    android:layout_width="match_parent"
+    android:layout_height="0dp"
+    android:layout_weight="1">
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="278dp"
-        android:gravity="center"
-        android:orientation="horizontal">
-
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
 
         <TextView
-            android:layout_width="126dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:fontFamily="sans-serif-light"
-            android:text="At YVTD's Perfume, we believe that true beauty originates from the heart of nature. Our mission is to bring you high end perfume that helps you feel confident at all times"
-            android:textAlignment="viewStart"
-            android:textSize="14sp" />
-
-        <!-- Enlarged ImageView to take more space -->
-        <ImageView
-            android:layout_width="283dp"
-            android:layout_height="match_parent"
-            android:layout_weight="2"
-            android:src="@mipmap/img_big" />
-    </LinearLayout>
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Why choose us !!"
-        android:textColor="#967054"
-        android:textSize="24sp"
-        android:textStyle="bold"
-        android:fontFamily="@font/recursive_bold"
-        android:gravity="center"/>
-
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="92dp"
-        android:gravity="center"
-        android:orientation="horizontal">
-
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/recursive_bold"
+            android:gravity="center"
+            android:text="Embrace The Pure Scent Of Nature"
+            android:textColor="#967054"
+            android:textSize="30sp"
+            android:textStyle="bold" />
 
         <LinearLayout
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
+            android:layout_width="match_parent"
+            android:layout_height="278dp"
             android:gravity="center"
-            android:orientation="vertical">
+            android:orientation="horizontal">
+
 
             <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="137dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
                 android:fontFamily="sans-serif-light"
-                android:text="Accessibility"
-                android:textSize="18sp" />
+                android:text="At YVTD's Perfume, we believe that true beauty originates from the heart of nature. Our mission is to bring you high end perfume that helps you feel confident at all times"
+                android:textAlignment="viewStart"
+                android:textSize="14sp" />
 
             <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@mipmap/img_accessibility" />
-
+                android:layout_width="283dp"
+                android:layout_height="match_parent"
+                android:layout_weight="2"
+                android:src="@mipmap/img_gucci" />
         </LinearLayout>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Why choose us !!"
+            android:textColor="#967054"
+            android:textSize="24sp"
+            android:textStyle="bold"
+            android:fontFamily="@font/recursive_bold"
+            android:gravity="center"/>
 
 
         <LinearLayout
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
+            android:layout_width="match_parent"
+            android:layout_height="92dp"
             android:gravity="center"
-            android:orientation="vertical">
+            android:orientation="horizontal">
 
-            <TextView
-                android:layout_width="wrap_content"
+
+            <LinearLayout
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:fontFamily="sans-serif-light"
+                android:layout_weight="1"
                 android:gravity="center"
-                android:text="Sustainable "
-                android:textSize="18sp" />
+                android:orientation="vertical">
 
-            <ImageView
-                android:layout_width="wrap_content"
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="sans-serif-light"
+                    android:text="Accessibility"
+                    android:textSize="18sp" />
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@mipmap/img_accessibility" />
+
+            </LinearLayout>
+
+
+            <LinearLayout
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:src="@mipmap/img_tick" />
+                android:layout_weight="1"
+                android:gravity="center"
+                android:orientation="vertical">
 
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="sans-serif-light"
+                    android:gravity="center"
+                    android:text="Sustainable "
+                    android:textSize="18sp" />
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@mipmap/img_tick" />
+
+            </LinearLayout>
+
+
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:orientation="vertical">
+
+
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="sans-serif-light"
+                    android:text="Journey"
+                    android:textSize="16sp" />
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@mipmap/img_journey" />
+            </LinearLayout>
         </LinearLayout>
+
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="About Us"
+            android:fontFamily="@font/recursive_bold"
+            android:textSize="24sp"
+            android:textStyle="bold"
+            android:textColor="#967054"
+            android:gravity="center"/>
 
 
         <LinearLayout
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
+            android:layout_width="match_parent"
+            android:layout_height="379dp"
             android:gravity="center"
-            android:orientation="vertical">
+            android:orientation="horizontal"
+            android:padding="20dp">
 
-
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:fontFamily="sans-serif-light"
-                android:text="Journey"
-                android:textSize="16sp" />
 
             <ImageView
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
+                android:layout_height="447dp"
+                android:layout_weight="2"
+                android:src="@mipmap/img_ok" />
+
+            <TextView
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:src="@mipmap/img_journey" />
+                android:layout_weight="1"
+                android:fontFamily="sans-serif-light"
+                android:paddingLeft="10dp"
+                android:text="Perfume is like a parenthesis of freedom, peace, love and a link between the disturbances."
+                android:textSize="14sp" />
+
         </LinearLayout>
-    </LinearLayout>
-
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="About Us"
-        android:fontFamily="@font/recursive_bold"
-        android:textSize="24sp"
-        android:textStyle="bold"
-        android:textColor="#967054"
-        android:gravity="center"/>
-
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:orientation="horizontal">
-
-
-        <ImageView
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="2"
-            android:src="@mipmap/img_hinhdep" />
-
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:fontFamily="sans-serif-light"
-            android:text="Perfume is like a parenthesis of freedom, peace, love and a link between the disturbances."
-            android:textSize="14sp" />
 
     </LinearLayout>
+</ScrollView>
+
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/bottomNavigationmenu"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         app:menu="@menu/bottom_nav_menu"
-        />
+        android:layout_gravity="end|bottom"/>
 
 </LinearLayout>
